--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,6 +7,10 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
+analyzer:
+  errors:
+    deprecated_member_use: ignore
+    file_names: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
