--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_svg: ^2.0.17
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
+  dio: ^5.8.0+1
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
